--- a/ui/package.json
+++ b/ui/package.json
@@ -35,17 +35,27 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "d3": "^5.9.1",
+    "d3-queue": "^3.0.7",
     "eslint-config-prettier": "^4.0.0",
     "eslint-import-resolver-webpack": "^0.11.0",
+    "material-design-icons": "^3.0.1",
     "material-ui": "^0.20.2",
+    "moment": "^2.24.0",
     "prettier": "^1.16.4",
     "prop-types": "^15.6.2",
+    "queue": "^5.0.1",
     "react": "^16.7.0",
+    "react-dates": "^18.4.1",
     "react-dom": "^16.7.0",
     "react-jss": "^8.6.1",
+    "react-queue": "^0.6.1",
     "react-redux": "^5.1.1",
+    "react-with-direction": "^1.3.0",
     "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
-    "theme": "^0.1.0"
+    "theme": "^0.1.0",
+    "topojson": "^3.0.2",
+    "topojson-client": "^3.0.0"
   }
 }
